# diplom_code

./: .gitignore  Backup_func.h  CMakeLists.txt  Energy_calc.cpp  GAS_CONSTANTS.h  GLOBAL_VARS.H  Gas_constants.h  Global_vars.h  HEADERS.h  Help_functions.cpp  Help_functions.h  Main  Main.cpp  Mathemathical_modelling.cpp  Molecule.h  Params.h  README.md  SYSTEM_PARAMS.h  Speed_generation.cpp  Speed_generation.h  Start_conditions.h  Thermostat.cpp  Verlet_scheme.cpp  rx_1.txt  rx_2.txt  ry_1.txt
include/: GAS_CONSTANTS.h  GLOBAL_VARS.H  HEADERS.h  SYSTEM_PARAMS.h
